---------------------------------------------------------------------------------------------------
Version: 0.1.9
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.1.8
Date: 2024-11-24
  Bugfixes:
    - Fixed copy-popup of virtual signals not opening
---------------------------------------------------------------------------------------------------
Version: 0.1.7
Date: 2024-11-23
  Bugfixes:
    - Fixed typo in update_signal_types_table
    - Fixed fatal error when signal type is nil
---------------------------------------------------------------------------------------------------
Version: 0.1.6
Date: 2024-11-22
  Bugfixes:
    - Fixed On_Built_Entity event not called by SpaceStation build
---------------------------------------------------------------------------------------------------
Version: 0.1.5
Date: 2024-11-21
  Bugfixes:
    - Fixed Recipe signals not working
    - Fixed signal retrival in cn_sig
  Features:
    - Added a ui to copy signals
---------------------------------------------------------------------------------------------------
Version: 0.1.4
Date: 2024-11-12
  Features:
    - Added prototype in _api
    - Added click on label to put signal name at the end of the code editor.
---------------------------------------------------------------------------------------------------
Version: 0.1.3
Date: 2024-11-12
  Bugfixes:
    - Fixed pairs(red/green) not outputting quality signals
    - Fixed normal prefix of signals not returning normal quality signals
    - Fixed concatenate on a nil value on signals
---------------------------------------------------------------------------------------------------
Version: 0.1.2
Date: 2024-11-09
  Features:
    - Added support for item quality.
---------------------------------------------------------------------------------------------------
Version: 0.1.1
Date: 2024-11-09
  Bugfixes: