@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.9
-Date: ????
+Date: 2025-10-18
   Changes:
+    - Fixed a bug preventing green and red inputs from being assigned to variables (e.g., test = green)
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.8
 Date: 2024-11-24
